# rust_grpc_playground

./: README.md
00_hello_world/: Cargo.toml  README.md  build.rs
00_hello_world/src/: client.rs  server.rs
01_slightly_more_complex/: Cargo.toml  README.md  build.rs
01_slightly_more_complex/src/: client.rs  server.rs
02_using_json/: Cargo.toml  README.md  build.rs
02_using_json/protos/: usingjson.proto
02_using_json/src/: client.rs  server.rs
03_auth_interceptors/: Cargo.toml  README.md  build.rs
03_auth_interceptors/protos/: auth.proto
03_auth_interceptors/src/: client.rs  server.rs
