[package]
name = "using_json"
version = "0.1.0"
authors = ["HopesHigh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json-server"
path = "src/server.rs"

[[bin]]
name = "json-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.2"
