[package]
name = "auth"
version = "0.1.0"
authors = ["HopesHigh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth-server"
path = "src/server.rs"

[[bin]]
name = "auth-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.2"
